tests/common/snapshots/gzip__common__tests__gzip.rs-15-5_ordered_extractions.snap
---
source: tests/common/mod.rs
assertion_line: 77
expression: ordered_extractions
---
- size: 88037
  success: true
  extractor: gzip_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
- size: 51
  success: true
  extractor: gzip_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
