tests/common/snapshots/gzip__common__tests__gzip.rs-29-5_file_map.snap
---
source: tests/common/mod.rs
assertion_line: 68
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 88055
  name: gzip
  confidence: 250
  description: "gzip compressed data, operating system: Unix, timestamp: 1970-01-01 00:00:00, total size: 88055 bytes"
  always_display: false
  extraction_declined: false
