tests/common/snapshots/gzip__common__tests__gzip.rs-7-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 88037
  success: true
  extractor: gzip_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
